examples/type_system/failing/132_let_initializer_span_precision.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn main() -> Unit {
    let x: Int = if true { "hello" } else { "world" }
}
